[metadata]
name = heat-infoblox
summary = OpenStack Heat resources for orchestrating Infoblox appliances.
description-file =
    README.rst
author = Infoblox, Inc.
author-email = openstack-maintainer@infoblox.com
home-page = http://www.infoblox.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    heat_infoblox

[compile_catalog]
directory = heat_infoblox/locale
domain = heat-infoblox

[update_catalog]
domain = heat-infoblox
output_dir = heat_infoblox/locale
input_file = heat_infoblox/locale/heat-infoblox.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = heat_infoblox/locale/heat-infoblox.pot
